pr changes update