@@ -2,13 +2,14 @@ package com.pio.studentManagement.controller;
 
 import com.pio.studentManagement.dto.StudentSendDTO;
 import com.pio.studentManagement.service.StudentServiceImpl;
+import com.pio.studentManagement.utils.SaveStudentResponse;
 import jakarta.validation.Valid;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -25,26 +26,26 @@ public class FormController {
 
     /**
      * Endpoint to handle the submit form request
-     * @param studentSendDTO : Object to store the student data
+     *
+     * @param dto : Object to store the student data
      * @return : Returns the response of data saved successfully
      */
-    @PostMapping(value = "/save", consumes = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<Map<String, String>> saveForm(@Valid @RequestBody StudentSendDTO studentSendDTO) {
-        try {
-            logger.info("student data received");
-            if (studentServiceImpl.saveStudent(studentSendDTO).getMessage() == "Data saved successfully")
-            return ResponseEntity.ok(Collections.singletonMap("message", "Data saved successfully"));
-            else {
-                return ResponseEntity.ok(Collections.singletonMap("message", "Student with this name already exists"));
-            }
-        } catch (Exception e) {
-            logger.error("Error in storing data {}", e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.singletonMap("Error", "Error in storing data"));
-        }
+    @PostMapping(value = "/save")
+    public ResponseEntity<?> saveForm(@Valid @RequestBody StudentSendDTO dto) {
+        logger.info("Data of {} received", dto.getName());
+        SaveStudentResponse result = studentServiceImpl.saveStudent(dto);
+        return switch (result.getStatus()) {
+            case SUCCESS -> ResponseEntity.ok(Map.of("message", result.getMessage(), "name", dto.getName()));
+            case ALREADY_EXISTS ->
+                    ResponseEntity.status(HttpStatus.CONFLICT).body(Map.of("message", result.getMessage()));
+            default ->
+                    ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("message", "Unexpected Error Occurred"));
+        };
     }
 
     /**
      * Endpoint to handle view list request
+     *
      * @return : Returns the list of students
      */
     @GetMapping("/showList")
